# snakes-V

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  PLAN.md  README.md  TODOS.md  pyproject.toml
.devcontainer/: devcontainer.json
config/: robot_schema.yaml
docs/: ROADMAP.md  TODO.md  memory-system-design.md  memory-write-protocol.md
src/manastone/: __init__.py
src/manastone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/manastone/agent/: __init__.py  agent.py  background.py  event_sink.py  file_memory.py  intent.py  llm_proxy.py  mcp_interface.py  memdir.py  memory.py  memory_extractor.py  token_budget.py  workflows.py
src/manastone/commissioning/: chain_orchestrator.py  chain_scorer.py  multi_profile.py
src/manastone/commissioning/autoresearch/: agent_loop.py  experiment.py  llm_client.py  workspace.py
src/manastone/common/: __init__.py  config.py  llm_client.py  models.py  safety.py
src/manastone/knowledge/: lineage.py  model_zoo.py  template_library.py  transfer.py
src/manastone/lifecycle/: __init__.py  context_bridge.py  lifecycle_repo.py  session_orchestrator.py  state_machine.py  stream.py  switching.py
src/manastone/profiles/: profile.py  registry.py
src/manastone/runtime/: __init__.py  anomaly_scorer.py  dds_bridge.py  event_store.py  ring_buffer.py  semantic_engine.py
storage/: lifecycle_state.json
storage/eventlog/: events.db
tests/: conftest.py  test_agent.py  test_commissioning.py  test_dds_bridge.py  test_idle_tuning.py  test_knowledge.py  test_lifecycle.py  test_llm_proxy.py  test_profiles.py  test_safety.py
(+23 files in other folders)
